# embedded-graphics-menu

./: Cargo.toml  README.md
examples/: bw.rs  rgb.rs
src/: lib.rs
