[package]
name = "embedded-graphics-menu"
version = "0.1.0"
authors = ["Theo Hussey <husseytg@gmail.com>"]
edition = "2018"

[dependencies]
embedded-graphics = "0.7.0-alpha.1"
heapless = "0.5.5"
generic-array = "0.14.4"

[dev-dependencies]
embedded-graphics-simulator = { git = "https://github.com/jamwaffles/embedded-graphics.git", rev="62ca571ba2659f51d20749513fdcb5cb1c669a44" }
sdl2 = "0.32.2"